tính năng sắp xếp

--- a/products.html
+++ b/products.html
@@ -127,6 +127,15 @@
                   <input type="text" placeholder="Tìm kiếm ở đây..." value=""/>
                   <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
+                <div class="select">
+                  <select class="select__sort" name="sort" select-sort="select-sort">
+                    <option value="" selected="selected">Sắp xếp </option>
+                    <option value="position-desc">Vị trí giảm dần</option>
+                    <option value="position-asc">Vị trí tăng dần</option>
+                    <option value="title-asc">Tiêu đề từ A - Z</option>
+                    <option value="title-desc">Tiêu đề từ Z - A</option>
+                  </select>
+                </div>
               </div>
               <div class="card__head-right">
                 <div class="button button__outline">
