tính năng đọc checkbox

--- a/products.html
+++ b/products.html
@@ -148,11 +148,11 @@
               <thead class="table__head">
                 <tr> 
                   <td> 
-                    <input class="checkbox-tick" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="" check-box-all>
                   </td>
                   <th>Sản Phẩm </th>
                   <th>Danh Mục</th>
-                  <th>Số Lượng</th>
+                  <th>Số lượng</th>
                   <th>Giá</th>
                   <th>Trạng Thái</th>
                   <th> </th>
@@ -161,7 +161,7 @@
               <tbody class="table__body">
                 <tr> 
                   <td> 
-                    <input class="checkbox-tick" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="" check-box-single="65e9ad24841aed5173b59dd3">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
@@ -186,7 +186,7 @@
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox-tick" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="" check-box-single="65e9ad24841aed5173b59dd4">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
@@ -211,7 +211,7 @@
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox-tick" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="" check-box-single="65e9ad24841aed5173b59dd5">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
@@ -236,7 +236,7 @@
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox-tick" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="" check-box-single="65e9ad24841aed5173b59dd6">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZlv9AxXdlrzKkbCJxBFiJJdOE7UcwevFAuw&amp;s" alt="Bí mật của naoke">
                     <h3>Bí mật của naoke</h3>
@@ -261,7 +261,7 @@
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox-tick" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="" check-box-single="65e9ad24841aed5173b59dda">
                   </td>
                   <td class="table__title"><img src="https://bizweb.dktcdn.net/thumb/large/100/197/269/products/83eab7a387b88b9209f41000e6735c02.jpg?v=1703572315407" alt="HBR ON BUSINESS MODEL INNOVATION - Đổi Mới Mô Hình Kinh Doanh">
                     <h3>HBR ON BUSINESS MODEL INNOVATION - Đổi Mới Mô Hình Kinh Doanh</h3>
